Closed
Bug 117956
Opened 23 years ago
Closed 23 years ago
Non-latin attachment name sent from Drafts is displaying garbled
Categories
(MailNews Core :: Internationalization, defect, P4)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0
People
(Reporter: marina, Assigned: nhottanscp)
Details
(Keywords: intl)
Attachments
(2 files, 2 obsolete files)
183.68 KB,
image/jpeg
|
Details | |
2.84 KB,
patch
|
bugzilla
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
*** observed with 2002-01-03 build ***
Steps to reproduce:
- have a non-latin1 message in the Drafts folder that was forwarded as an
attachment( i used Central European-8859-2 and ISO-2022-jp);
- select the message;
- click on the "Edit" drafts button;
//note that at this point the attachment name on the envelpe is quoted correctly;
- send message from Drafts;
- get message and note that the attachment name displays as ((( or ????
Assignee | ||
Comment 4•23 years ago
|
||
Cc to ducarroz, is there any special handling for a file name sent by Draft folder?
Comment 5•23 years ago
|
||
Wierd, I don't have a clue about what could append!
Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 6•23 years ago
|
||
The screen shot looks like a forward as inline. Is that really a forward as
attachment?
Comment 7•23 years ago
|
||
This is a forward as attachment.
Assignee | ||
Updated•23 years ago
|
Target Milestone: --- → mozilla0.9.9
Assignee | ||
Comment 10•23 years ago
|
||
This can be fixed with the patch of bug 66098 (and the depending bug) and a
little change to mimedraft.cpp. Also seem to fix the edit as new bug.
Depends on: 66098
Assignee | ||
Comment 11•23 years ago
|
||
Actually needs the patch of bug 110689.
Assignee | ||
Comment 12•23 years ago
|
||
Assignee | ||
Comment 13•23 years ago
|
||
Attachment #67348 -
Attachment is obsolete: true
Assignee | ||
Comment 14•23 years ago
|
||
The patch also needs to take care the override case.
Assignee | ||
Comment 15•23 years ago
|
||
Attachment #67349 -
Attachment is obsolete: true
Comment 16•23 years ago
|
||
Comment on attachment 68606 [details] [diff] [review]
Changed to use a default charset for non forward case, if we cannot find a charset in the header or the override is set. Also removed unnecessary conversion to UTF-8.
Looks good. R=ducarroz
Attachment #68606 -
Flags: review+
Comment 17•23 years ago
|
||
Comment on attachment 68606 [details] [diff] [review]
Changed to use a default charset for non forward case, if we cannot find a charset in the header or the override is set. Also removed unnecessary conversion to UTF-8.
sr=bienvenu
Attachment #68606 -
Flags: superreview+
Assignee | ||
Comment 18•23 years ago
|
||
checked in the patch but need bug 110689 to get the folder charset
Assignee | ||
Updated•23 years ago
|
Priority: -- → P4
Assignee | ||
Comment 20•23 years ago
|
||
Please try tomorrow's build. I think this is fixed by bug 66098.
Assignee | ||
Comment 21•23 years ago
|
||
Mark as fixed, please verify using the trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 22•23 years ago
|
||
same problem with the 2002-04-18-03 trunk build. reopening.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Comment 23•23 years ago
|
||
How about the branch?
Reporter | ||
Comment 24•23 years ago
|
||
the display in the branch is Ok , except i encounter bug 136938 that got fixed
but is not in the build i am looking at now.
Reporter | ||
Comment 25•23 years ago
|
||
i got hit by bug 110729 ( non-ascii mail displaying garbled after viewing pdf
file), so i am going back to fixed resolution.
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
Updated•20 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•