Changed to use a default charset for non forward case if we cannot find a charset in the header or the override is set. Also removed unnecessary conversion to UTF-8, bug 117956, r=ducarroz, sr=bienvenu.